--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,38 @@
-# Node modules
+# --- Dependencies ---
+# (No slash at the start allows this to work in subfolders like 'frontend/')
 node_modules/
-frontend/node_modules/
-backend/node_modules/
+.pnp
+.pnp.js
 
-# Logs
+# --- Environment Variables (Secrets) ---
+# It is important to cover all variations
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.env
+
+# --- Next.js ---
+.next/
+out/
+build/
+dist/
+
+# --- System Files ---
+.DS_Store
+Thumbs.db
+*.pem
+
+# --- Debugging ---
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+.pnpm-debug.log*
 
-# Env files
-*.env
-frontend/.env
-backend/.env
-frontend/.env.local
+# --- Vercel ---
+.vercel
 
-# Build outputs
-.next/
-out/
-dist/
-build/
-backend/dist/
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Editor
-.vscode/
-.idea/
+# --- TypeScript ---
+*.tsbuildinfo
+next-env.d.ts
